fix sonar grammar code